--- a/index.html
+++ b/index.html
@@ -288,6 +288,17 @@
 
                     <div class="certificate">
                         <div class="certificate-cover">
+                            <img src="assets/img/Sertifikat-dasar-pemrograman-web.jpg" alt="Certificate-Image"
+                                onclick="showPreview(this)">
+                        </div>
+
+                        <div class="certificate-title">
+                            <h4>Sertifikat dicoding dasar pemrograman web</h4>
+                        </div>
+                    </div>
+
+                    <div class="certificate">
+                        <div class="certificate-cover">
                             <img src="assets/img/Sertifikat-dicoding-javascript.jpg" alt="Certificate-Image"
                                 onclick="showPreview(this)">
                         </div>
