--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     </main>
 
     <footer>
-        <p>Submission Dicoding Academy &#169; 2024, Heriawan Syahputra</p>
+        <p>Copyright &#169; 2024, Heriawan Syahputra</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
